Update 1. Predator model experiments - behaviour.md

--- a/1. Predator model experiments - behaviour.md
+++ b/1. Predator model experiments - behaviour.md
@@ -11,6 +11,10 @@ dm_b2 = read.csv(csvFile, header=T)
 ```
 
 ## Sample size
+If you want too see sample size code:
+<details>
+  <summary>Click to expand code</summary>
+
 ```r
 # Number of individuals per condition
 dm_b2 %>% 
@@ -29,9 +33,10 @@ dm_b2_summary2 <- dm_b2 %>%
   filter(!is.na(behaviour3)) %>% 
   group_by(context_experiment, behaviour3) %>%
   summarise(occurrences = n(), individuals = n_distinct(id), .groups = "drop")
-```
+</details> ```
+
+## Table with number of behaviour occurrences recorded per condition with number of individuals in brackets
 ```r
-# Table number of behaviour occurrences recorded per condition with number of individuals in brackets
 | Condition          | Approach model  | Bipedal | Flee down | Flee straight | Flee up | Move down | Move up | Tail  | Yawn |
 |--------------------|---------------  |---------|-----------|-----------    |---------|---------  |------   |------ |------|
 | Eagle (N=8)        | 1(1)            | 5(4)    | 2(2)      | 1(1)          | 2(2)    | 3(3)      | 1(1)    | 10(6) | 3(2) |
