Update 1. Predator model experiments - behaviour.md

--- a/1. Predator model experiments - behaviour.md
+++ b/1. Predator model experiments - behaviour.md
@@ -11,7 +11,7 @@ dm_b2 = read.csv(csvFile, header=T)
 ```
 
 ## Sample size
-If you want too see sample size code:
+If you want to see the code used to extract sample sizes:
 <details>
   <summary>Click to expand code</summary>
 
@@ -33,7 +33,8 @@ dm_b2_summary2 <- dm_b2 %>%
   filter(!is.na(behaviour3)) %>% 
   group_by(context_experiment, behaviour3) %>%
   summarise(occurrences = n(), individuals = n_distinct(id), .groups = "drop")
-</details> ```
+ ```
+</details> 
 
 ## Table with number of behaviour occurrences recorded per condition with number of individuals in brackets
 ```r
