Update 1. Predator model experiments - behaviour.md

--- a/1. Predator model experiments - behaviour.md
+++ b/1. Predator model experiments - behaviour.md
@@ -33,14 +33,36 @@ dm_b2_summary2 <- dm_b2 %>%
   filter(!is.na(behaviour3)) %>% 
   group_by(context_experiment, behaviour3) %>%
   summarise(occurrences = n(), individuals = n_distinct(id), .groups = "drop")
+
+# Table (long format) with the number of occurrences  of behaviour number of individuals
+dm_b2_summary3 <- dm_b2 %>%
+  filter(!is.na(behaviour3)) %>% 
+  group_by(behaviour3) %>%
+  summarise(
+    occurrences = n(),
+    individuals = n_distinct(id), 
+    .groups = "drop")
  ```
 </details> 
 
 ## Table with number of behaviour occurrences recorded per condition with number of individuals in brackets
 ```r
-| Condition          | Approach model  | Bipedal | Flee down | Flee straight | Flee up | Move down | Move up | Tail  | Yawn |
-|--------------------|---------------  |---------|-----------|-----------    |---------|---------  |------   |------ |------|
-| Eagle (N=8)        | 1(1)            | 5(4)    | 2(2)      | 1(1)          | 2(2)    | 3(3)      | 1(1)    | 10(6) | 3(2) |
-| Leopard (N=9)      | 0(0)            | 0(0)    | 0(0)      | 0(0)          | 9(9)    | 0(0)      | 1(1)    | 1(1)  | 0(0) |
-| Viper (N=10)       | 3(3)            | 4(4)    | 0(0)      | 5(5)          | 4(4)    | 1(1)      | 5(5)    | 5(4)  | 0(0) |
+| Condition          | Approach model  | Bipedal | Flee      | Move down | Move up | Tail raise | Yawn |
+|--------------------|---------------  |---------|-----------|-----------|---------|------------|------|
+| Eagle (N=8)        | 1(1)            | 5(4)    | 5(5)      | 3(3)      | 1(1)    | 10(6)      | 3(2) |
+| Leopard (N=9)      | 0(0)            | 0(0)    | 9(9)      | 0(0)      | 1(1)    | 1(1)       | 0(0) |
+| Viper (N=10)       | 3(3)            | 4(4)    | 9(9)      | 1(1)      | 5(5)    | 5(4)       | 0(0) |
+|--------------------|-----------------|---------|-----------|-----------|---------|------------|------|
+| Total              | 4(3)	           | 9(8)    | 23(20)    | 4(4)	     | 7(7)    | 16(8)	    | 3(2) |
+| Percentage         | 6.1%	           | 13.6%   | 34.8%     | 6.1%    	 | 10.6%   | 24.2%	    | 4.5% |
+```
+
+
+## Table with number of flee behaviour occurrences recorded per condition with number of individuals in brackets
+```r
+| Condition          | Flee down | Flee straight | Flee up | Flee duration |
+|--------------------|-----------|---------------|---------|---------------|
+| Eagle (N=5)        | 2(2)      | 1(1)          | 2(2)    | 
+| Leopard (N=9)      | 0(0)      | 0(0)          | 9(9)    | 
+| Viper (N=9)        | 0(0)      | 5(5)          | 4(4)    |
 ```
