Update 1. Predator model experiments - behaviour.md

--- a/1. Predator model experiments - behaviour.md
+++ b/1. Predator model experiments - behaviour.md
@@ -53,16 +53,16 @@ dm_b2_summary3 <- dm_b2 %>%
 | Leopard (N=9)      | 0(0)            | 0(0)    | 9(9)      | 0(0)      | 1(1)    | 1(1)       | 0(0) |
 | Viper (N=10)       | 3(3)            | 4(4)    | 9(9)      | 1(1)      | 5(5)    | 5(4)       | 0(0) |
 |--------------------|-----------------|---------|-----------|-----------|---------|------------|------|
-| Total              | 4(3)	           | 9(8)    | 23(20)    | 4(4)	     | 7(7)    | 16(8)	    | 3(2) |
+| Total              | 4(3)	           | 9(8)    | 23(16)    | 4(4)	     | 7(7)    | 16(8)	    | 3(2) |
 | Percentage         | 6.1%	           | 13.6%   | 34.8%     | 6.1%    	 | 10.6%   | 24.2%	    | 4.5% |
 ```
+Fleeing represented 34.8% of total behaviours and was used by the majority of individuals (16/23), making it the most frequent behaviour across all conditions. This was followed by tail raises (24.2%, N = 8 individuals) and bipedalism (13.6%, N = 8 individuals). Other behaviours, such as approaching the model (6.1%) and yawning (4.5%), were less common (see Table). Given the high frequency of fleeing, which likely serves as an escape response, and its occurrence across all conditions, we focus on analysing how it varies depending on the type of predator.
 
-
-## Table with number of flee behaviour occurrences recorded per condition with number of individuals in brackets
+## Table with number of flee behaviour occurrences and behaviour recorded per condition with number of individuals in brackets
 ```r
-| Condition          | Flee down | Flee straight | Flee up | Flee duration |
-|--------------------|-----------|---------------|---------|---------------|
-| Eagle (N=5)        | 2(2)      | 1(1)          | 2(2)    | 
-| Leopard (N=9)      | 0(0)      | 0(0)          | 9(9)    | 
-| Viper (N=9)        | 0(0)      | 5(5)          | 4(4)    |
+| Condition          | Flee down | Flee straight | Flee up | Flee duration mean(SE) in s |
+|--------------------|-----------|---------------|---------|-----------------------------|
+| Eagle (N=5)        | 2(2)      | 1(1)          | 2(2)    | 3.41(0.93)                  |
+| Leopard (N=9)      | 0(0)      | 0(0)          | 9(9)    | 7.99(1.68)                  |  
+| Viper (N=9)        | 0(0)      | 5(5)          | 4(4)    | 1.55(0.24)                  |
 ```
