--- a/1. Predator model experiments - behaviour.md
+++ b/1. Predator model experiments - behaviour.md
@@ -45,16 +45,16 @@ dm_b2_summary3 <- dm_b2 %>%
  ```
 </details> 
 
-## Table with number of behaviour occurrences recorded per condition with number of individuals in brackets
+## Table. Number of behaviour occurrences recorded per condition with number of individuals in brackets
 ```r
-| Condition          | Approach model  | Bipedal | Flee      | Move down | Move up | Tail raise | Yawn |
-|--------------------|---------------  |---------|-----------|-----------|---------|------------|------|
-| Eagle (N=8)        | 1(1)            | 5(4)    | 5(5)      | 3(3)      | 1(1)    | 10(6)      | 3(2) |
-| Leopard (N=9)      | 0(0)            | 0(0)    | 9(9)      | 0(0)      | 1(1)    | 1(1)       | 0(0) |
-| Viper (N=10)       | 3(3)            | 4(4)    | 9(9)      | 1(1)      | 5(5)    | 5(4)       | 0(0) |
-|--------------------|-----------------|---------|-----------|-----------|---------|------------|------|
-| Total              | 4(3)	           | 9(8)    | 23(16)    | 4(4)	     | 7(7)    | 16(8)	    | 3(2) |
-| Percentage         | 6.1%	           | 13.6%   | 34.8%     | 6.1%    	 | 10.6%   | 24.2%	    | 4.5% |
+| Condition          | Approach model  | Bipedal | Flee  | Move down | Move up | Tail raise | Yawn |
+|--------------------|-----------------|---------|-------|-----------|---------|------------|------|
+| Eagle (N=8)        | 1 (1)           | 5 (4)   | 5 (5) | 3 (3)     | 1 (1)   | 10 (6)     | 3 (2) |
+| Leopard (N=9)      | 0 (0)           | 0 (0)   | 9 (9) | 0 (0)     | 1 (1)   | 1 (1)      | 0 (0) |
+| Viper (N=10)       | 3 (3)           | 4 (4)   | 9 (9) | 1 (1)     | 5 (5)   | 5 (4)      | 0 (0) |
+|--------------------|-----------------|---------|-------|-----------|---------|------------|------|
+| Total              | 4 (3)           | 9 (8)   | 23 (16)| 4 (4)    | 7 (7)   | 16 (8)     | 3 (2) |
+| Percentage         | 6.1%            | 13.6%   | 34.8% | 6.1%      | 10.6%   | 24.2%      | 4.5% |
 ```
 Fleeing represented 34.8% of total behaviours and was used by the majority of individuals (16/23), making it the most frequent behaviour across all conditions. This was followed by tail raises (24.2%, N = 8 individuals) and bipedalism (13.6%, N = 8 individuals). Other behaviours, such as approaching the model (6.1%) and yawning (4.5%), were less common (see Table). Given the high frequency of fleeing, which likely serves as an escape response, and its occurrence across all conditions, we focus on analysing how it varies depending on the type of predator.
 
