Update 1. Predator model experiments - behaviour.md

--- a/1. Predator model experiments - behaviour.md
+++ b/1. Predator model experiments - behaviour.md
@@ -45,7 +45,7 @@ dm_b2_summary3 <- dm_b2 %>%
  ```
 </details> 
 
-## Table. Number of behaviour occurrences recorded per condition with number of individuals in brackets
+### Table. Number of behaviour occurrences recorded per condition with number of individuals in brackets
 ```r
 | Condition          | Approach model  | Bipedal | Flee  | Move down | Move up | Tail raise | Yawn |
 |--------------------|-----------------|---------|-------|-----------|---------|------------|------|
@@ -58,7 +58,7 @@ dm_b2_summary3 <- dm_b2 %>%
 ```
 Fleeing represented 34.8% of total behaviours and was used by the majority of individuals (16/23), making it the most frequent behaviour across all conditions. This was followed by tail raises (24.2%, N = 8 individuals) and bipedalism (13.6%, N = 8 individuals). Other behaviours, such as approaching the model (6.1%) and yawning (4.5%), were less common (see Table). Given the high frequency of fleeing, which likely serves as an escape response, and its occurrence across all conditions, we focus on analysing how it varies depending on the type of predator.
 
-## Table with number of flee behaviour occurrences and behaviour recorded per condition with number of individuals in brackets
+### Table. Number of flee behaviour occurrences with direction and duration per condition with number of individuals in brackets
 ```r
 | Condition          | Flee down | Flee straight | Flee up | Flee duration mean(SE) in s |
 |--------------------|-----------|---------------|---------|-----------------------------|
@@ -66,3 +66,114 @@ Fleeing represented 34.8% of total behaviours and was used by the majority of in
 | Leopard (N=9)      | 0(0)      | 0(0)          | 9(9)    | 7.99(1.68)                  |  
 | Viper (N=9)        | 0(0)      | 5(5)          | 4(4)    | 1.55(0.24)                  |
 ```
+ In 17 trials, individuals began either on the ground or less than 50 cm from it, and in the remaining 10 trials, they were between 50 cm and 3 m above the ground. Since individuals on the ground cannot flee down, combining these two directions seemed appropriate for analyses. 
+
+## Analyse flee duration
+```r
+# Only keep flee behaviours
+ dm_b2_f_dur <- dm_b2 %>% 
+  subset(behaviour == "f")
+
+# Run model
+m_flee_dur <- brm(
+  formula = flee_duration ~ context_experiment + (1 | id),
+  data = dm_b2_f_dur,
+  family = Gamma(link = "identity"),
+  chains = 4,  
+  iter = 4000,
+  control = list(adapt_delta = 0.99))
+``` 
+#### Model summary
+<details>
+  <summary>Click to expand code</summary>
+
+```r
+# Summary
+Multilevel Hyperparameters:
+~id (Number of levels: 16) 
+              Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
+sd(Intercept)     0.48      0.40     0.02     1.45 1.00     3069     3784
+
+Regression Coefficients:
+                          Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
+Intercept                     3.79      1.23     2.09     6.78 1.00     3905     2337
+context_experimentleopard     4.53      2.04     0.67     8.76 1.00     4015     3214
+context_experimentviper      -2.01      1.29    -4.97    -0.02 1.00     3861     2332
+
+Further Distributional Parameters:
+      Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
+shape     3.26      1.06     1.58     5.70 1.00     4731     4889
+
+# Inspect model 
+plot(m_flee_dur)
+pp_check(m_flee_dur, ndraws = 100)
+ ```
+</details> 
+
+### Post hoc comparison 
+```r
+# Post hoc comparison 
+emm <- emmeans(m_flee_dur, ~ context_experiment)
+# Run pairwise comparisons with Bonferroni adjustment
+pairwise_comparisons <- pairs(emm, adjust = "bonferroni")
+# Print the results
+print(pairwise_comparisons)
+contrast        estimate lower.HPD upper.HPD
+ eagle - leopard    -4.46    -8.784    -0.706
+ eagle - viper       1.84    -0.133     4.633
+ leopard - viper     6.34     3.260     9.799
+
+Point estimate displayed: median 
+HPD interval probability: 0.95 
+ ```
+### Visualisation
+<details>
+  <summary>Click to expand code</summary>
+  
+```r
+# Extract conditional effects for the flee_duration model
+ce_m_flee_dur <- conditional_effects(m_flee_dur)
+
+# Calculate the mean for the 'estimate__' column in the flee_duration data frame
+mean_flee_duration <- sapply(ce_m_flee_dur$context_experiment$estimate__, mean)
+
+# Extract the 'context_experiment' data frame for further examination
+ce_m_flee_dur$context_experiment
+
+# Create a data frame for the results
+flee_duration_results <- data.frame(
+  condition = c("eagle", "leopard", "viper"),  # Conditions
+  mean = c(3.574395, 8.099396, 1.717936),     # Mean estimates
+  lower_CI = c(2.092473, 5.622763, 1.119093), # Lower CI estimates
+  upper_CI = c(6.781251, 12.172299, 2.795418) # Upper CI estimates
+)
+
+# View the updated data frame
+print(flee_duration_results)
+
+# Custom labels for x-axis, e.g., sample size
+custom_labels <- c("Eagle\n5", "Leopard\n9", "Viper\n9")
+
+
+# Plot
+ggplot() +
+  # Raw data points with jitter for visibility
+  geom_point(data = dm_b2_f_dur, aes(x = context_experiment, y = flee_duration, color = context_experiment),
+             position = position_jitter(width = 0.2), alpha = 0.6, size = 1.5) +
+  # Mean points for each condition
+  geom_point(data = flee_duration_results, aes(x = condition, y = mean, color = condition), size = 4) +
+  # Error bars without whiskers
+  geom_linerange(data = flee_duration_results, aes(x = condition, ymin = lower_CI, ymax = upper_CI, color = condition), size = 1) +
+  # Labels and theme
+  labs(x = NULL, y = "Flee duration (s)") +
+  theme_minimal() +
+  theme( panel.grid.major = element_blank(),  # Remove major grid lines
+         panel.grid.minor = element_blank(),  # Remove minor grid lines
+         text = element_text(size = 14),      # General text size
+         axis.text = element_text(size = 12), # Axis text size
+         axis.line = element_line(size = 0.5, color = "black")) +         
+  scale_x_discrete(labels = custom_labels) +
+  scale_color_manual(values = c("eagle" = "#070707", "leopard" = "orange", "viper" = "#08C45D"))  + # Custom colours
+  guides(color = "none")  # Remove legend
+ ```
+</details> 
