Update 1. Predator model experiments - behaviour.md

--- a/1. Predator model experiments - behaviour.md
+++ b/1. Predator model experiments - behaviour.md
@@ -1,7 +1,7 @@
-# 1. Predator model experiment - behaviours
+# Predator model experiment - behaviours
 Here we analyse the behavioural responses (all but vocal responses) of sooty mangabeys when presented with realistic models of leopard, eagle and viper (Gaboon and Rhinoceros). 
 
-## Data
+### Data
 ```r
 # Dataset
 # select the datafile "mangabey behaviour2" #NEED TO UPLOAD THE FILE ONCE WITH ONLY RELEVANT COLUMNS
@@ -10,7 +10,7 @@ csvFile <- file.choose()
 dm_b2 = read.csv(csvFile, header=T)
 ```
 
-## Sample size
+### 1. Sample size
 If you want to see the code used to extract sample sizes:
 <details>
   <summary>Click to expand code</summary>
@@ -68,7 +68,7 @@ Fleeing represented 34.8% of total behaviours and was used by the majority of in
 ```
  In 17 trials, individuals began either on the ground or less than 50 cm from it, and in the remaining 10 trials, they were between 50 cm and 3 m above the ground. Since individuals on the ground cannot flee down, combining these two directions seemed appropriate for analyses. 
 
-## Analyse flee duration
+## 2. Analyse flee duration
 ```r
 # Only keep flee behaviours
  dm_b2_f_dur <- dm_b2 %>% 
@@ -183,3 +183,7 @@ ggplot() +
 In the analysis of flee duration, we found significant differences across the three conditions. The mean flee duration was shortest in the viper condition (mean posterior distribution = 1.72, 95%-CI [1.12–2.80]), followed by the eagle condition (mean posterior distribution = 3.57, 95%-CI [2.09–6.78]), and the longest duration was observed in the leopard condition (mean posterior distribution = 8.10, 95%-CI [5.62–12.17]). 
 
 The pairwise comparisons revealed that the mean flee duration in the eagle condition was significantly shorter than in the leopard condition (estimate = -4.46, 95%-CI [-8.78–-0.71]). In contrast, the flee duration in the eagle condition was significantly longer than in the viper condition (estimate = 1.84, 95%-CI [-0.13–4.63]). Finally, the leopard condition had a significantly longer flee duration than the viper condition (estimate = 6.34, 95%-CI [3.26–9.80]).
+
+## 3. Analyse flee direction
+```r
+ ```
