Update 1. Predator model experiments - behaviour.md

--- a/1. Predator model experiments - behaviour.md
+++ b/1. Predator model experiments - behaviour.md
@@ -183,9 +183,9 @@ The bars represent the credible interval at 95% and the point is the mean poster
 
 <img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/Flee%20duration.png?raw=true" alt="flee_d" width="600"/>
 
-In the analysis of flee duration, we found significant differences across the three conditions. The mean flee duration was shortest in the viper condition (mean posterior distribution = 1.72, 95%-CI [1.12–2.80]), followed by the eagle condition (mean posterior distribution = 3.57, 95%-CI [2.09–6.78]), and the longest duration was observed in the leopard condition (mean posterior distribution = 8.10, 95%-CI [5.62–12.17]). 
+In the analysis of flee duration, we found significant differences across the three conditions. The mean flee duration the was shortest in the viper condition (mean posterior distribution = 1.72, 95%-CI [1.12–2.80]), followed by the eagle condition (mean posterior distribution = 3.57, 95%-CI [2.09–6.78]), and the longest duration was observed in the leopard condition (mean posterior distribution = 8.10, 95%-CI [5.62–12.17]). 
 
-The pairwise comparisons revealed that the mean flee duration in the eagle condition was significantly shorter than in the leopard condition (estimate = -4.46, 95%-CI [-8.78–-0.71]). In contrast, the flee duration in the eagle condition was not significantly different from the viper condition (estimate = 1.84, 95%-CI [-0.13–4.63]). Finally, the leopard condition had a significantly longer flee duration than the viper condition (estimate = 6.34, 95%-CI [3.26–9.80]).
+The pairwise comparisons showed that flee duration in leopard condition was significantly longer than in the eagle (estimate = -4.46, 95%-CI [-8.78–-0.71]) and viper (estimate = 6.34, 95%-CI [3.26–9.80]) conditions. In contrast, flee duration in the eagle condition was not significantly different from the viper condition, although there was a tendency towards a longer flee duration in the eagle condition (estimate = 1.84, 95%-CI [-0.13–4.63]). 
 
 ## 3. Analyse flee direction
 ```r
