Update 1. Predator model experiments - behaviour.md

--- a/1. Predator model experiments - behaviour.md
+++ b/1. Predator model experiments - behaviour.md
@@ -89,6 +89,8 @@ m_flee_dur <- brm(
 
 ```r
 # Summary
+summary(m_flee_dur)
+
 Multilevel Hyperparameters:
 ~id (Number of levels: 16) 
               Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
@@ -178,7 +180,7 @@ ggplot() +
  ```
 </details> 
 
-### Figure. Flee duration in s recorded depending on the type of predator     
+#### Figure. Flee duration in s recorded depending on the type of predator     
 The bars represent the credible interval at 95% and the point is the mean posterior distribution of the model.
 
 <img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/Flee%20duration.png?raw=true" alt="flee_d" width="600"/>
@@ -189,4 +191,117 @@ The pairwise comparisons showed that flee duration in leopard condition was sign
 
 ## 3. Analyse flee direction
 ```r
+# Subset + create variable flee_direction2 to merge direction same (straight) and down into 0 and up into 1
+dm_b2_f_dir <- dm_b2 %>%
+  subset(behaviour == "f") %>%
+  mutate(flee_direction2 = case_when(
+      flee_direction == "up" ~ 1,   # "Up" gets 1
+      TRUE ~ 0))                    # Any other direction gets 0
+
+# Run model
+m_flee_dir2_hierarchical <- brm(
+  flee_direction2 ~ (1 | context_experiment) + (1 | id),
+  data = dm_b2_f_dir,
+  family = bernoulli(),
+  chains = 4, iter = 8000, warmup = 4000,
+  control = list(adapt_delta = 0.99, max_treedepth = 15))
+```
+We treated context_experiment and id as random effects in the flee direction model because the binary outcome (fleeing up or not) showed large variability across both predator types and individuals.
+
+#### Model summary
+<details>
+  <summary>Click to expand code</summary>
+
+```r
+# Summary
+summary(m_flee_dir2_hierarchical)
+
+Multilevel Hyperparameters:
+~context_experiment (Number of levels: 3) 
+              Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
+sd(Intercept)     3.83      2.65     0.82    10.30 1.00     8889     8135
+
+~id (Number of levels: 16) 
+              Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
+sd(Intercept)     2.50      2.05     0.12     7.55 1.00     5028     6563
+
+Regression Coefficients:
+          Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
+Intercept     0.85      1.82    -2.76     4.70 1.00     9048     9061
+
+# Inspect model
+plot(m_flee_dir2_hierarchical)
+pp_check(m_flee_dir2_hierarchical, ndraws = 100)
  ```
+</details> 
+
+### Visualisation
+<details>
+  <summary>Click to expand code</summary>
+  
+```r
+# Extract posterior means for each context
+context_effects <- coef(m_flee_dir2_hierarchical)$context_experiment
+str(context_effects)
+
+# Convert log-odds to probabilities for each context
+# Initialise an empty data frame to store results
+results_df <- data.frame(Context = character(0), 
+                         Estimate_Prob = numeric(0), 
+                         Lower_Prob = numeric(0), 
+                         Upper_Prob = numeric(0))
+
+# Loop through all contexts (eagle, leopard, viper)
+for (context in dimnames(context_effects)[[1]]) {
+  # Extract log-odds for the context
+  Estimate_log_odds <- context_effects[context, "Estimate", 1]
+  Lower_log_odds <- context_effects[context, "Q2.5", 1]
+  Upper_log_odds <- context_effects[context, "Q97.5", 1]
+  
+  # Convert log-odds to probabilities
+  Estimate_Prob <- plogis(Estimate_log_odds)
+  Lower_Prob <- plogis(Lower_log_odds)
+  Upper_Prob <- plogis(Upper_log_odds)
+  
+  # Append results for the current context to the data frame
+  results_df <- rbind(results_df, data.frame(Context = context, 
+                                             Estimate_Prob = Estimate_Prob, 
+                                             Lower_Prob = Lower_Prob, 
+                                             Upper_Prob = Upper_Prob))
+}
+
+# View the results
+print(results_df)
+
+# Custom labels for x-axis 
+custom_labels <- c("Eagle\n5", "Leopard\n9", "Viper\n9")
+
+# Plot
+ggplot(results_df, aes(x = Context, y = Estimate_Prob, color = Context)) +
+  geom_point(position = position_dodge(width = 0.5), size = 4) +
+  geom_errorbar(aes(ymin = Lower_Prob, ymax = Upper_Prob), width = 0, position = position_dodge(width = 0.5)) +
+  geom_hline(yintercept = 0.5, linetype = "dashed", color = "black") +
+  ylim(0, 1) +
+  labs(x = "", y = "Probability of fleeing up", color = "Last call") +
+  theme_minimal() +
+  theme(
+    panel.grid.major = element_blank(),  # Remove major grid lines
+    panel.grid.minor = element_blank(),  # Remove minor grid lines
+    legend.position = "right",
+    text = element_text(size = 14),              # General text size
+    axis.text = element_text(size = 12),         # Axis text size
+    axis.title = element_text(size = 14),        # Axis title size
+    legend.text = element_text(size = 12),       # Legend text size
+    legend.title = element_text(size = 14),      # Legend title size
+    axis.line = element_line(size = 0.5, color = "black")  # Explicitly add axis lines
+  ) +
+  scale_color_manual(values = c("eagle" = "#070707", "leopard" = "orange", "viper" = "#08C45D")) +
+  scale_x_discrete(labels = custom_labels) +
+  guides(color = "none")
+ ```
+</details> 
+
+#### Figure. Probability of fleeing up depending on predator type    
+The bars represent the credible interval at 95% and the point is the mean posterior distribution of the model.
+
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/Flee%20direction.jpeg" alt="flee_di" width="600"/>
