Update 1. Predator model experiments - behaviour.md

--- a/1. Predator model experiments - behaviour.md
+++ b/1. Predator model experiments - behaviour.md
@@ -305,3 +305,5 @@ ggplot(results_df, aes(x = Context, y = Estimate_Prob, color = Context)) +
 The bars represent the credible interval at 95% and the point is the mean posterior distribution of the model.
 
 <img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/Flee%20direction.jpeg" alt="flee_di" width="600"/>
+
+We found consistent support that the probability of fleeing upwards was high in the leopard condition (mean probability and 95% CI for fleeing up 0.99, 95%-CI[0.75–1]). However, in the eagle and viper conditions, we did not find that fleeing upwards was higher than fleeing downwards or straight. For the eagle condition, the mean probability of fleeing upwards was 0.32 (95%-CI [0.01–0.91]), while the mean probability of fleeing downwards/straight was 0.68 (95%-CI [0.09–0.99]). For the viper condition, the mean probability of fleeing upwards was 0.40 (95%-CI [0.03–0.89]), and the mean probability of fleeing downwards/straight was 0.60 (95%-CI [0.11–0.97]).
