--- a/1. Predator model experiments - behaviour.md
+++ b/1. Predator model experiments - behaviour.md
@@ -185,7 +185,7 @@ The bars represent the credible interval at 95% and the point is the mean poster
 
 <img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/Flee%20duration.png?raw=true" alt="flee_d" width="400"/>
 
-In the analysis of flee duration, we found significant differences across the three conditions. The mean flee duration the was shortest in the viper condition (mean posterior distribution = 1.72, 95%-CI [1.12–2.80]), followed by the eagle condition (mean posterior distribution = 3.57, 95%-CI [2.09–6.78]), and the longest duration was observed in the leopard condition (mean posterior distribution = 8.10, 95%-CI [5.62–12.17]). 
+In the analysis of flee duration, the mean flee duration the was shortest in the viper condition (mean posterior distribution = 1.72, 95%-CI [1.12–2.80]), followed by the eagle condition (mean posterior distribution = 3.57, 95%-CI [2.09–6.78]), and the longest duration was observed in the leopard condition (mean posterior distribution = 8.10, 95%-CI [5.62–12.17]). 
 
 The pairwise comparisons showed that flee duration in leopard condition was significantly longer than in the eagle (estimate = -4.46, 95%-CI [-8.78–-0.71]) and viper (estimate = 6.34, 95%-CI [3.26–9.80]) conditions. In contrast, flee duration in the eagle condition was not significantly different from the viper condition, although there was a tendency towards a longer flee duration in the eagle condition (estimate = 1.84, 95%-CI [-0.13–4.63]). 
 
@@ -307,3 +307,23 @@ The bars represent the credible interval at 95% and the point is the mean poster
 <img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/Flee%20direction.jpeg" alt="flee_di" width="400"/>
 
 We found consistent support that the probability of fleeing upwards was high in the leopard condition (mean probability and 95% CI for fleeing up 0.99, 95%-CI[0.75–1]). However, in the eagle and viper conditions, we did not find that fleeing upwards was higher than fleeing downwards or straight. For the eagle condition, the mean probability of fleeing upwards was 0.32 (95%-CI [0.01–0.91]), while the mean probability of fleeing downwards/straight was 0.68 (95%-CI [0.09–0.99]). For the viper condition, the mean probability of fleeing upwards was 0.40 (95%-CI [0.03–0.89]), and the mean probability of fleeing downwards/straight was 0.60 (95%-CI [0.11–0.97]).
+
+#### Table. Position in the canopy after fleeing depending on predator type
+```r
+# Position in canopy after fleeing up
+dm_b2 %>% 
+  subset(behaviour2 == "End fleeing" & flee_direction == "up" ) %>% 
+  group_by(context_experiment, position) %>% 
+  summarise(n=n(), individuals = n_distinct(id))
+
+            |         Final position            |
+| Condition | Between 5cm and 3m | More than 3m |
+|-----------|--------------------|--------------|
+| Eagle     | 1 (1)              | 1 (1)        |
+| Leopard   | 1 (1)              | 8 (8)        |
+| Viper     | 4 (4)              | 0 (0)        |
+```
+### Main findings
+#### Fleeing behaviours
+Leopard = elicits fleeing 100% of the time, direction is always up, strong escape response.
+Viper = 
