Update 1. Predator model experiments - behaviour.md

--- a/1. Predator model experiments - behaviour.md
+++ b/1. Predator model experiments - behaviour.md
@@ -62,7 +62,7 @@ Fleeing represented 34.8% of total behaviours and was used by the majority of in
 ```r
 | Condition          | Flee down | Flee straight | Flee up | Flee duration mean(SE) in s |
 |--------------------|-----------|---------------|---------|-----------------------------|
-| Eagle (N=5)        | 2(2)      | 1(1)          | 2(2)    | 3.41(0.93)                  |
+| Eagle (N=5)        | 2(2)      | 0(0)          | 3(3)    | 3.41(0.93)                  |
 | Leopard (N=9)      | 0(0)      | 0(0)          | 9(9)    | 7.99(1.68)                  |  
 | Viper (N=9)        | 0(0)      | 5(5)          | 4(4)    | 1.55(0.24)                  |
 ```
@@ -90,21 +90,20 @@ m_flee_dur <- brm(
 ```r
 # Summary
 summary(m_flee_dur)
-
 Multilevel Hyperparameters:
 ~id (Number of levels: 16) 
               Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
-sd(Intercept)     0.48      0.40     0.02     1.45 1.00     3069     3784
+sd(Intercept)     0.50      0.41     0.02     1.53 1.00     2993     3492
 
 Regression Coefficients:
                           Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
-Intercept                     3.79      1.23     2.09     6.78 1.00     3905     2337
-context_experimentleopard     4.53      2.04     0.67     8.76 1.00     4015     3214
-context_experimentviper      -2.01      1.29    -4.97    -0.02 1.00     3861     2332
+Intercept                     3.79      1.20     2.10     6.86 1.00     5151     3207
+context_experimentleopard     4.50      1.98     0.61     8.62 1.00     4993     3856
+context_experimentviper      -2.02      1.26    -5.07    -0.05 1.00     5047     3307
 
 Further Distributional Parameters:
       Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
-shape     3.26      1.06     1.58     5.70 1.00     4731     4889
+shape     3.30      1.10     1.58     5.84 1.00     5981     4779
 
 # Inspect model 
 plot(m_flee_dur)
@@ -120,10 +119,10 @@ emm <- emmeans(m_flee_dur, ~ context_experiment)
 pairwise_comparisons <- pairs(emm, adjust = "bonferroni")
 # Print the results
 print(pairwise_comparisons)
-contrast        estimate lower.HPD upper.HPD
- eagle - leopard    -4.46    -8.784    -0.706
- eagle - viper       1.84    -0.133     4.633
- leopard - viper     6.34     3.260     9.799
+ contrast        estimate lower.HPD upper.HPD
+ eagle - leopard    -4.46    -8.672    -0.683
+ eagle - viper       1.85    -0.302     4.496
+ leopard - viper     6.36     3.459     9.938
 
 Point estimate displayed: median 
 HPD interval probability: 0.95 
@@ -145,9 +144,9 @@ ce_m_flee_dur$context_experiment
 # Create a data frame for the results
 flee_duration_results <- data.frame(
   condition = c("eagle", "leopard", "viper"),  # Conditions
-  mean = c(3.574395, 8.099396, 1.717936),     # Mean estimates
-  lower_CI = c(2.092473, 5.622763, 1.119093), # Lower CI estimates
-  upper_CI = c(6.781251, 12.172299, 2.795418) # Upper CI estimates
+  mean = c(3.587429, 8.094366, 1.720234),     # Mean estimates from ce_m_flee_dur
+  lower_CI = c(2.096110, 5.692541, 1.106940), # Lower CI estimates from ce_m_flee_dur
+  upper_CI = c(6.855647, 12.015303, 2.804658) # Upper CI estimates from ce_m_flee_dur
 )
 
 # View the updated data frame
@@ -185,9 +184,11 @@ The bars represent the credible interval at 95% and the point is the mean poster
 
 <img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/Flee%20duration.png?raw=true" alt="flee_d" width="400"/>
 
-In the analysis of flee duration, the mean flee duration the was shortest in the viper condition (mean posterior distribution = 1.72, 95%-CI [1.12–2.80]), followed by the eagle condition (mean posterior distribution = 3.57, 95%-CI [2.09–6.78]), and the longest duration was observed in the leopard condition (mean posterior distribution = 8.10, 95%-CI [5.62–12.17]). 
 
-The pairwise comparisons showed that flee duration in leopard condition was significantly longer than in the eagle (estimate = -4.46, 95%-CI [-8.78–-0.71]) and viper (estimate = 6.34, 95%-CI [3.26–9.80]) conditions. In contrast, flee duration in the eagle condition was not significantly different from the viper condition, although there was a tendency towards a longer flee duration in the eagle condition (estimate = 1.84, 95%-CI [-0.13–4.63]). 
+In the analysis of flee duration, the mean flee duration was shortest in the viper condition (mean posterior distribution = 1.72, 95%-CI [1.11–2.80]), followed by the eagle condition (mean posterior distribution = 3.59, 95%-CI [2.10–6.86]), and the longest duration was observed in the leopard condition (mean posterior distribution = 8.09, 95%-CI [5.69–12.02]).
+
+The pairwise comparisons showed that flee duration in the leopard condition was significantly longer than in the eagle (estimate = -4.46, 95%-CI [-8.67–-0.68]) and viper (estimate = 6.36, 95%-CI [3.46–9.94]) conditions. In contrast, flee duration in the eagle condition was not significantly different from the viper condition, although there was a tendency towards a longer flee duration in the eagle condition (estimate = 1.85, 95%-CI [-0.30–4.50]).
+
 
 ## 3. Analyse flee direction
 ```r
@@ -325,5 +326,6 @@ dm_b2 %>%
 ```
 ### Main findings
 #### Fleeing behaviours
-Leopard = elicits fleeing 100% of the time, direction is always up, strong escape response.
-Viper = 
+Leopard = elicits long flees (~8s) 100% of the time, direction is always up and in almost most cases (8/9) individual ends up more than 3m from the ground.
+Viper = elicits startle behaviours, i.e., short flees (<2s), 90% of the time, either on the ground (5/9 trials) or upwards (4/9 trials) but never more than 3m from the ground. 
+Eagle = elicits mixed fleeing behaviours. Individuals flee during approx. 3-4s half of the time (5/8 trials), in all possible directions (up, down/straight). 
