Update 1. Predator model experiments - behaviour.md

--- a/1. Predator model experiments - behaviour.md
+++ b/1. Predator model experiments - behaviour.md
@@ -1,6 +1,16 @@
 # Predator model experiment - behaviours
 Here we analyse the behavioural responses (all but vocal responses) of sooty mangabeys when presented with realistic models of leopard, eagle and viper (Gaboon and Rhinoceros). 
 
+### Main findings
+#### Fleeing behaviours
+Leopard = elicits long flees (~8s) 100% of the time, direction is always up and in almost most cases (8/9) individual ends up more than 3m from the ground.
+Viper = elicits startle behaviours, i.e., short flees (<2s), 90% of the time, either on the ground (5/9 trials) or upwards (4/9 trials) but never more than 3m from the ground. 
+Eagle = elicits mixed fleeing behaviours. Individuals flee during approx. 3-4s half of the time (5/8 trials), in all possible directions (up, down/straight). 
+
+#### Other behaviours
+Approximately half of the eagle and viper responses involved bipedalism and tail raises. 
+Bipedalism has already been found when encountering vipers, but I need to find potential explanations for this behaviour when facing an eagle and for tail raises across contexts. 
+
 ### Data
 ```r
 # Dataset
@@ -155,7 +165,6 @@ print(flee_duration_results)
 # Custom labels for x-axis, e.g., sample size
 custom_labels <- c("Eagle\n5", "Leopard\n9", "Viper\n9")
 
-
 # Plot
 ggplot() +
   # Raw data points with jitter for visibility
@@ -184,11 +193,9 @@ The bars represent the credible interval at 95% and the point is the mean poster
 
 <img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/Flee%20duration.png?raw=true" alt="flee_d" width="400"/>
 
-
 In the analysis of flee duration, the mean flee duration was shortest in the viper condition (mean posterior distribution = 1.72, 95%-CI [1.11–2.80]), followed by the eagle condition (mean posterior distribution = 3.59, 95%-CI [2.10–6.86]), and the longest duration was observed in the leopard condition (mean posterior distribution = 8.09, 95%-CI [5.69–12.02]).
 
 The pairwise comparisons showed that flee duration in the leopard condition was significantly longer than in the eagle (estimate = -4.46, 95%-CI [-8.67–-0.68]) and viper (estimate = 6.36, 95%-CI [3.46–9.94]) conditions. In contrast, flee duration in the eagle condition was not significantly different from the viper condition, although there was a tendency towards a longer flee duration in the eagle condition (estimate = 1.85, 95%-CI [-0.30–4.50]).
-
 
 ## 3. Analyse flee direction
 ```r
@@ -216,19 +223,19 @@ We treated context_experiment and id as random effects in the flee direction mod
 ```r
 # Summary
 summary(m_flee_dir2_hierarchical)
-
 Multilevel Hyperparameters:
 ~context_experiment (Number of levels: 3) 
               Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
-sd(Intercept)     3.83      2.65     0.82    10.30 1.00     8889     8135
+sd(Intercept)     3.38      2.38     0.54     9.40 1.00     7034     6161
 
 ~id (Number of levels: 16) 
               Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
-sd(Intercept)     2.50      2.05     0.12     7.55 1.00     5028     6563
+sd(Intercept)     2.50      2.14     0.11     7.89 1.00     4215     6003
 
 Regression Coefficients:
           Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
-Intercept     0.85      1.82    -2.76     4.70 1.00     9048     9061
+Intercept     1.19      1.84    -2.14     5.20 1.00     8037     6588
+
 
 # Inspect model
 plot(m_flee_dir2_hierarchical)
@@ -305,9 +312,9 @@ ggplot(results_df, aes(x = Context, y = Estimate_Prob, color = Context)) +
 #### Figure. Probability of fleeing up depending on predator type    
 The bars represent the credible interval at 95% and the point is the mean posterior distribution of the model.
 
-<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/Flee%20direction.jpeg" alt="flee_di" width="400"/>
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/Flee%20direction2.jpeg" alt="flee_di" width="400"/>
 
-We found consistent support that the probability of fleeing upwards was high in the leopard condition (mean probability and 95% CI for fleeing up 0.99, 95%-CI[0.75–1]). However, in the eagle and viper conditions, we did not find that fleeing upwards was higher than fleeing downwards or straight. For the eagle condition, the mean probability of fleeing upwards was 0.32 (95%-CI [0.01–0.91]), while the mean probability of fleeing downwards/straight was 0.68 (95%-CI [0.09–0.99]). For the viper condition, the mean probability of fleeing upwards was 0.40 (95%-CI [0.03–0.89]), and the mean probability of fleeing downwards/straight was 0.60 (95%-CI [0.11–0.97]).
+We found consistent support that the probability of fleeing upwards was high in the leopard condition (mean probability and 95% CI for fleeing up = 1, 95%-CI[0.71–1.00]). However, in the eagle and viper conditions, we did not find that fleeing upwards was higher than fleeing downwards or straight. For the eagle condition, the mean probability of fleeing upwards was 0.64 (95%-CI [0.05–0.98]), while the mean probability of fleeing downwards/straight was 0.36 (95%-CI [0.02–0.95]). For the viper condition, the mean probability of fleeing upwards was 0.44 (95%-CI [0.03–0.91]), and the mean probability of fleeing downwards/straight was 0.56 (95%-CI [0.09–0.97]).
 
 #### Table. Position in the canopy after fleeing depending on predator type
 ```r
@@ -320,12 +327,7 @@ dm_b2 %>%
             |         Final position            |
 | Condition | Between 5cm and 3m | More than 3m |
 |-----------|--------------------|--------------|
-| Eagle     | 1 (1)              | 1 (1)        |
+| Eagle     | 1 (1)              | 2 (2)        |
 | Leopard   | 1 (1)              | 8 (8)        |
 | Viper     | 4 (4)              | 0 (0)        |
 ```
-### Main findings
-#### Fleeing behaviours
-Leopard = elicits long flees (~8s) 100% of the time, direction is always up and in almost most cases (8/9) individual ends up more than 3m from the ground.
-Viper = elicits startle behaviours, i.e., short flees (<2s), 90% of the time, either on the ground (5/9 trials) or upwards (4/9 trials) but never more than 3m from the ground. 
-Eagle = elicits mixed fleeing behaviours. Individuals flee during approx. 3-4s half of the time (5/8 trials), in all possible directions (up, down/straight). 
